fix controllers and more
