# backend/swagger-output.json
@@ -109,7 +109,7 @@
         ],
         "responses": {
           "201": {
-            "description": "Utilisateur créé",
+            "description": "Utilisateur créé avec succès!",
             "schema": {
               "type": "object",
               "properties": {
@@ -742,7 +742,7 @@
         }
       }
     },
-    "/reservation/": {
+    "/reservations/": {
       "get": {
         "tags": ["Réservations"],
         "summary": "Obtenir toutes les réservations",
@@ -835,6 +835,9 @@
           },
           "403": {
             "description": "Interdit"
+          },
+          "404": {
+            "description": "Non Trouvé"
           }
         }
       },
@@ -927,6 +930,9 @@
           },
           "401": {
             "description": "Non Autorisé"
+          },
+          "404": {
+            "description": "Non Trouvé"
           },
           "409": {
             "description": "Réservation existante"
